cc: Fix semi-transparent background colors in LayerTreeHostImpl.

Make LayerTreeHostImpl not draw SolidColorDrawQuads for semi-transparent
background colors. This restores the original behavior prior to
https://crrev.com/c/669646, where it was accidentally changed.

Bug: 802308
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel
Change-Id: Ib354c3a0baf869a1cd288165144f14528eeebebe
Reviewed-on: https://chromium-review.googlesource.com/868691
Reviewed-by: enne <enne@chromium.org>
Commit-Queue: Eric Seckler <eseckler@chromium.org>
Cr-Commit-Position: refs/heads/master@{#529700}
Former-commit-id: ca3a79f4be52712d198d2b6b759d795d972b3e5b